syntax = "proto3";

service Minion {
    rpc SetMinionConfig(MinionConfig) returns(Reply) {}
    rpc GetMinionConfig(Request) returns (MinionConfig) {}
}

message MinionConfig {
    enum Role {
        NONE = 0;
        WORKER = 1;
        MASTER = 2;
    }

    string ID = 1;
    Role role = 2;
    string PrivateIP = 3;
    string PublicIP = 4;
    string Blueprint= 5;
    string Provider = 6;
    string Size = 7;
    string Region = 8;
    string FloatingIP = 9;
    repeated string EtcdMembers = 10;
    repeated string AuthorizedKeys = 11;
    map<string, string> MinionIPToPublicKey = 12;
}

message Reply {
}

message Request {
}
